# ------------------------------------------------------------------------------
# File:   Makefile.am 
# Author: James Couzens <jcouzens@6o4.ca>
# Date:   June 15, 2004  
# Info:   Makefile base for Autotools for the libSPF library
# ------------------------------------------------------------------------------

AUTOMAKE_OPTIONS  = foreign


# ------------------------------------------------------------------------------
# Includes
# ------------------------------------------------------------------------------

libspf_la_INCLUDES   = spf.h.in main.h macro.h util.h dns.h _stdint.h

INCLUDES             = -I$(top_srcdir)
includedir           = ${prefix}/include
EXTRA_DIST           = $(libspf_la_INCLUDES) util.c.in

# ------------------------------------------------------------------------------
# library name
# ------------------------------------------------------------------------------

lib_LTLIBRARIES     = libspf.la


# ------------------------------------------------------------------------------
# header files
# ------------------------------------------------------------------------------

include_HEADERS   = spf.h _stdint.h


# ------------------------------------------------------------------------------
# header files NOT to install
# ------------------------------------------------------------------------------

noinst_HEADERS    = main.h dns.h macro.h util.h


# ------------------------------------------------------------------------------
# library source files to compile
# ------------------------------------------------------------------------------

libspf_la_SOURCES   = main.c dns.c macro.c util.c


# ------------------------------------------------------------------------------
# library includes (-lresolv)
# ------------------------------------------------------------------------------

libspf_la_LIBADD   = @LIBSPF_RESOLV_LIB@ @LIBSPF_PTHREADS_LIB@


# ------------------------------------------------------------------------------
# library linktime flags
# ------------------------------------------------------------------------------

libspf_la_LDFLAGS = \
	-version-info "$(LT_CURRENT):$(LT_REVISION):$(LT_AGE)" \
	-release $(LT_RELEASE)


# ------------------------------------------------------------------------------
# Install
# ------------------------------------------------------------------------------

all-local:
	@[ -d ../../lib ] || mkdir ../../lib
	$(MAKE) DESTDIR= libdir=`pwd`/../../lib install-exec


# ------------------------------------------------------------------------------
# Clean
# ------------------------------------------------------------------------------

clean-local:
	rm -f _stdint.h
	rm -f util.c
	@[ -d ../../lib ] || rm -rfv ../../lib


# end of Makefile.am
